[fix] address overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -81,9 +81,16 @@ $backgroud-color: #040404;
   }
 
   .cardContent {
-    padding: 1.2rem 0;
+    padding: 0.2rem 0 0.5rem;
     h3 {
-      font-weight: 600;
+      font-weight: 700;
+      overflow: hidden;
+    }
+    p {
+      font-size: 12px;
+      overflow: hidden;
+      word-break: break-all;
+      max-height: 45px;
     }
   }
 }
@@ -164,7 +171,17 @@ form {
   box-shadow: 0px 0px 5px 0px rgba(125, 116, 243, 0.5);
   .desc {
     color: orange;
-    margin-inline: 5%;
+    margin-inline: 3% 6%;
+    max-width: 160px;
+    justify-content: center;
+    align-items: center;
+    max-height: 100px;
+    overflow: hidden;
+    word-break: break-all;
+
+    p {
+      font-size: 10px;
+    }
   }
 }
 // .playerTitle {
